--- a/index.html
+++ b/index.html
@@ -4,22 +4,27 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Page Title</title>
+    <title>Train Scheduler</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Bootstrap -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
         crossorigin="anonymous">
+
     <!-- Link to my CSS file -->
     <link rel="stylesheet" type="text/css" media="screen" href="../css/style.css" />
 
 </head>
 
 <body>
+    <div class="container">
+        <!-- Main Header -->
+        <div class="jumbotron">
+            <h1 class="text-center">Train Schedule</h1>
+            <p></p>
+        </div>
 
-    <div class="jumbotron">
-
-
-
+		<div class="row">
+                <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
 
 
 
@@ -28,7 +33,6 @@
 
 
     </div>
-
     <!-- Link to JQuery -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
