--- a/index.html
+++ b/index.html
@@ -23,8 +23,33 @@
             <p></p>
         </div>
 
-		<div class="row">
-                <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+        <div class="row">
+            <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+                <!-- Content for the current train schedule -->
+                <div class="panel panel-default">
+                    <!-- Panel heading-->
+                    <div class="panel-heading">Current Train Schedule</div>
+                    <div class="panel-body">
+                            <table class="table table-hover" id='currentTrain'>
+                                   <!-- Table Headings -->
+                                <thead>
+                                        <tr>
+                                            <th>Train Name</th>
+                                            <th>Destination</th>
+                                            <th>Frequency(min)</th>
+                                            <th>Next Arrival</th>
+                                            <th>Minutes Away</th>
+                                        </tr>
+                                    </thead>
+                                    <tbody>
+                                        <!-- Table body  -->
+                                        <p>   </p>
+                                    </tbody>
+                                </table>
+
+                    </div>
+
+                  
 
 
 
@@ -32,29 +57,30 @@
 
 
 
-    </div>
-    <!-- Link to JQuery -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+                </div>
+            </div>
+            <!-- Link to JQuery -->
+            <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
-    <!-- Link to Moment.js -->
-    <script src="https://cdn.jsdelivr.net/momentjs/2.12.0/moment.min.js"></script>
+            <!-- Link to Moment.js -->
+            <script src="https://cdn.jsdelivr.net/momentjs/2.12.0/moment.min.js"></script>
 
-    <!-- Link to Firebase -->
-    <script src="https://www.gstatic.com/firebasejs/4.11.0/firebase.js"></script>
-    <script>
-        // Initialize Firebase
-        var config = {
-            apiKey: "AIzaSyCgzWoqOlrRg11uM0uqJXXA7IS8kI8vgPw",
-            authDomain: "train-schedule-16ac2.firebaseapp.com",
-            databaseURL: "https://train-schedule-16ac2.firebaseio.com",
-            projectId: "train-schedule-16ac2",
-            storageBucket: "train-schedule-16ac2.appspot.com",
-            messagingSenderId: "974441390295"
-        };
-        firebase.initializeApp(config);
-    </script>
-    <!-- Link to my Javascript file -->
-    <script src="../javascript/app.js"></script>
+            <!-- Link to Firebase -->
+            <script src="https://www.gstatic.com/firebasejs/4.11.0/firebase.js"></script>
+            <script>
+                // Initialize Firebase
+                var config = {
+                    apiKey: "AIzaSyCgzWoqOlrRg11uM0uqJXXA7IS8kI8vgPw",
+                    authDomain: "train-schedule-16ac2.firebaseapp.com",
+                    databaseURL: "https://train-schedule-16ac2.firebaseio.com",
+                    projectId: "train-schedule-16ac2",
+                    storageBucket: "train-schedule-16ac2.appspot.com",
+                    messagingSenderId: "974441390295"
+                };
+                firebase.initializeApp(config);
+            </script>
+            <!-- Link to my Javascript file -->
+            <script src="../javascript/app.js"></script>
 </body>
 
 </html>
