--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
     <!-- Bootstrap -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
         crossorigin="anonymous">
-
+    <!-- Link to Firebase -->
+    <script src="https://www.gstatic.com/firebasejs/4.11.0/firebase.js"></script> 
+    <!-- Link to Moment.js -->
+    <script src="https://cdn.jsdelivr.net/momentjs/2.12.0/moment.min.js"></script>
 </head>
 
 <body>
@@ -49,7 +52,11 @@
                             <tbody>
                                 <!-- Table body  -->
                                 <tr>
-                                    <th id="displayName">Train Name</th>
+                                    <td id="displayName"></td>
+                                    <td id="displayDestination"></td>
+                                    <td id="displayFrequency"></td>
+                                    <td id="displayArrival"></td>
+                                    <td id="displayMin"></td>
                                 </tr>
                             </tbody>
                         </table>
@@ -88,7 +95,7 @@
                                 <input type="text" class="form-control" id="frequency">
                             </div>
 
-                            <button type="submit" class="btn btn-primary" id="addBt" style="background-color:rgb(88, 154, 174); color:white;">Submit</button>
+                            <button type="submit" class="btn btn-primary" id="addButton" style="background-color:rgb(88, 154, 174); color:white;">Submit</button>
                         </form>
                     </div>
                 </div>
@@ -96,28 +103,11 @@
         </div>
     </div>
 
-    <!-- Link to JQuery -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
-    <!-- Link to Moment.js -->
-    <script src="https://cdn.jsdelivr.net/momentjs/2.12.0/moment.min.js"></script>
-
-    <!-- Link to Firebase -->
-    <script src="https://www.gstatic.com/firebasejs/4.11.0/firebase.js"></script>
-    <!-- <script>
-        // Initialize Firebase
-        var config = {
-            apiKey: "AIzaSyCgzWoqOlrRg11uM0uqJXXA7IS8kI8vgPw",
-            authDomain: "train-schedule-16ac2.firebaseapp.com",
-            databaseURL: "https://train-schedule-16ac2.firebaseio.com",
-            projectId: "train-schedule-16ac2",
-            storageBucket: "train-schedule-16ac2.appspot.com",
-            messagingSenderId: "974441390295"
-        };
-        firebase.initializeApp(config);
-    </script> -->
-    <!-- Link to my Javascript file -->
-    <script src="../javascript/app.js"></script>
+    <!-- jQuery -->
+    <script src="https://code.jquery.com/jquery.js"></script>
+    <!-- Javascript file -->
+    <script src="assets/javascript/app.js"></script>
 </body>
 
 </html>
