--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <div class="row">
             <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
                 <!-- Content for the current train schedule -->
-                <div class="panel panel-primary">
+                <div class="panel panel-primary"class="well">
 
                     <!-- Panel heading-->
                     <div class="panel-heading" style="background-color:rgb(88, 154, 174); color:white;">
@@ -51,7 +51,7 @@
                             </thead>
                             <tbody>
                                 <!-- Table body  -->
-                                <tr>
+                                <tr id="table">
                                     <td id="displayName"></td>
                                     <td id="displayDestination"></td>
                                     <td id="displayFrequency"></td>
