adding a more  datailed ReadMe file

--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
 
         <div class="row">
             <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-
+                
                 <!-- Content for the current train schedule -->
-                <div class="panel panel-primary">
+                <div class="panel panel-primary" class="well">
 
                     <!-- Panel heading-->
                     <div class="panel-heading" style="background-color:rgb(88, 154, 174); color:white;">
@@ -56,11 +56,11 @@
                             <tbody>
                                 <!-- Table body  -->
                                 <tr id="table">
-                                    <th id="displayName"></th>
-                                    <th id="displayDestination"></th>
-                                    <th id="displayFrequency"></th>
-                                    <th id="displayArrival"></th>
-                                    <th id="displayMin"></th>
+                                    <td id="displayName"></td>
+                                    <td id="displayDestination"></td>
+                                    <td id="displayFrequency"></td>
+                                    <td id="displayArrival"></td>
+                                    <td id="displayMin"></td>
                                 </tr>
                             </tbody>
                         </table>
